# Qrisc

./: .gitignore  LICENSE  Makefile  README.md
Amaranth/: Makefile  README.md  pyproject.toml  ys
Amaranth/lint/: verilator.vlt
Amaranth/src/: README.md
Amaranth/src/Qrisc32Model/: __init__.py  model.py  rtl.py  runner.py  verilog.py
Amaranth/src/qrisc32_model/: rtl.py  runner.py  verilog.py
Amaranth/tb/: README.md  conftest.py  test_vectors.py
BSC/: Makefile  README.md  ys
BSC/lint/: verilator.vlt
BSC/rtl/: Qrisc32RTL.bs  README.md
BSC/src/: Qrisc32Model.bs  README.md
BSC/tb/: AxiTest.bs  FlagsTest.bs  IsaTest.bs  ModelAxiTest.bs  ModelFlagsTest.bs  ModelIsaTest.bs  ModelSmokeTest.bs  README.md  SmokeTest.bs
BSV/: AvalonBus.bsv  Makefile  Qrisc_pack.bsv  Readme.md  mem.bsv  mkTestbench.bsv  qrisc32.bsv  qrisc32_EX.bsv  qrisc32_ID.bsv  qrisc32_IF.bsv  qrisc32_MEM.bsv  qrisc32_tb.bsv  ys
Clash/: Makefile  README.md  qrisc32-clash.cabal  ys
Clash/lint/: verilator.vlt
Clash/src/: Qrisc32Model.hs  Qrisc32RTL.hs  README.md
Clash/tb/: Main.hs  README.md  gen_vector_bench.py
SystemVerilog/: Makefile  Readme.md  Readme.txt  mem.sv  qrisc32.sv  qrisc32_EX.sv  qrisc32_ID.sv  qrisc32_IF.sv  qrisc32_MEM.sv  qrisc32_tb.cpp  qrisc32_tb.sv  risc_pack.sv  ys
doc/: Makefile  isa.md  risc_present.tex
tests/: README.md  axi_smoke.hex  flags.hex  isa.hex  smoke_bubble.hex  smoke_reversed.hex  smoke_shell_first.hex  smoke_shell_mdf.hex  vectors.json
tools/: equiv_axi.sh  equiv_flags.sh  equiv_isa.sh  equiv_smoke.sh  generate_sort_vectors.py
(+58 files in other folders)
