[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qrisc32-amaranth"
version = "0.1.0"
description = "Amaranth qrisc32 RTL, Verilog emitter, and vector benches"
requires-python = ">=3.10"
dependencies = [
  "amaranth>=0.4",
  "pytest>=7",
  "pytest-xdist>=3.6"
]

[tool.setuptools.packages.find]
where = ["src"]
